<resources>
    <string name="app_name" translatable="false">MyTrainingTracker</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_workout">Workout</string>
    <string name="title_goal">Goal</string>
    <string name="title_profile">Profile</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="sajad">Sajad</string>
    <string name="mohammadi">Mohammadi</string>
    <string name="sajad_email_com">sajad@email.com</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="program_title">Program Title</string>
    <string name="duration">Duration</string>
    <string name="program_duration">%d days program</string>
    <string name="go_to_program">Go to program</string>
    <string name="training_programs">Training programs</string>
    <string name="add_program">Add Program</string>
    <string name="description">Description</string>
    <string name="weekly_frequency">Weekly frequency (e.g. 6 days)</string>
    <string name="recent_program">Recent Program</string>
    <string name="goals_in_focus">Goals in Focus</string>
    <string name="new_goal">New Goal</string>
    <string name="create_program">Create Program</string>
    <string name="set_a_goal">Set a Goal</string>
    <string name="new_program">New Program</string>
    <string name="no_goals_yet">No goals yet? Set one to begin your journey!</string>
    <string name="no_programs_yet">No programs yet? Create one!</string>
    <string name="your_programs">Your Programs</string>
    <string name="routine_title">Routine Title</string>
    <string name="note">Note</string>
    <string name="view_routine">View Routine</string>
    <string name="start_fresh">New Routine</string>
    <string name="training_program_name_is_required">Training program name is required</string>
    <string name="description_is_required">Description is required</string>
    <string name="duration_is_required">Duration is required</string>
    <string name="please_enter_a_valid_duration">Please enter a valid duration</string>
    <string name="duration_must_be_between_1_and_7_days">Duration must be between 1 and 7 days</string>
    <string name="training_program_updated">Training program updated successfully</string>
    <string name="routine_deleted">Routine deleted successfully</string>
    <string name="name_is_required">Name is Required</string>
    <string name="set">SET</string>
    <string name="kg">KG</string>
    <string name="reps">REPS</string>
    <string name="underscore">_</string>
    <string name="edit_routine">Edit Routine</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="path_workout">\\workout</string>
    <string name="path_routine">\\workout\\routine</string>
    <string name="path_exercise">\\workout\\routine\\exercise</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="reorder_exercise_info">Reorder exercises easily with drag-and-drop!</string>
    <string name="exercise_title">Exercise Title</string>
    <string name="exercises_title">&lt;- %s</string>
    <string name="reset_routine">Reset Routine</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="not_implemented_yet">Not Implemented Yet</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="password_is_required">Password is required</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="login_successful">Login successful</string>
    <string name="user_registered_successfully">User registered successfully</string>
    <string name="exercise_name_is_required">Exercise name is required</string>
    <string name="invalid_number">Invalid number</string>
    <string name="sets_must_be_between_0_and_20">Sets must be between 0 and 20</string>
    <string name="kg_must_be_between_0_and_1000">Kg must be between 0 and 1000</string>
    <string name="reps_must_be_between_0_and_100">Reps must be between 0 and 100</string>
    <string name="exercise_added_successfully">Exercise added successfully</string>
    <string name="routine_added_successfully">Routine added successfully</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_enter_a_description">Please enter a description</string>
    <string name="training_program_saved_successfully">Training program saved successfully</string>
    <string name="exercise_updated_successfully">Exercise updated successfully</string>
    <string name="routine_updated_successfully">Routine updated successfully</string>
    <string name="training_program_deleted_successfully">Training program deleted successfully</string>
    <string name="language">\uD83C\uDDF8\uD83C\uDDEA Svenska</string>
    <string name="program_name_e_g_advanced_full_body">Program Name (e.g. Advanced Full-Body)</string>
    <string name="routine_name_e_g_legs">Routine Name (e.g. Legs)</string>
    <string name="exercise_name_e_g_squat">Exercise Name (e.g. Squat)</string>
    <string name="exercise_deleted_successfully">Exercise deleted successfully</string>
    <string name="set_your_goals_and_start_your_journey_to_success">Set your goals and start your journey to success!</string>
    <string name="goal_description">Goal descripion</string>
    <string name="please_select_valid_priority_and_status">Please select valid Priority and Status</string>
    <string name="goal_added_successfully">Goal added successfully</string>
    <string name="goal_updated_successfully">Goal updated successfully!</string>
    <string name="goal_deleted">Goal deleted!</string>
    <string-array name="goal_priority">
        <item>Priority</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="goal_status">
        <item>Status</item>
        <item>Planned</item>
        <item>In progress</item>
        <item>Completed</item>
    </string-array>
</resources>