<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <EditText
        android:id="@+id/etExerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_bordered"
        android:hint="@string/exercise_name_e_g_squat"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etSet"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_bordered"
        android:hint="@string/set"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etExerciseName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etKg"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bordered"
        android:hint="@string/kg"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/etSet"
        app:layout_constraintEnd_toStartOf="@+id/etReps"
        app:layout_constraintStart_toEndOf="@+id/etSet"
        app:layout_constraintTop_toTopOf="@+id/etSet"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etReps"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bordered"
        android:hint="@string/reps"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/etKg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etKg"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/etReps"
        app:layout_constraintStart_toStartOf="@+id/etSet"
        app:layout_constraintTop_toBottomOf="@+id/etSet" />

</androidx.constraintlayout.widget.ConstraintLayout>
