<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/exerciseTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/routine_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/exerciseTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/exerciseTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp" />

        <TextView
            android:id="@+id/tvSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tvKg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            app:layout_constraintBottom_toBottomOf="@+id/tvSet"
            app:layout_constraintEnd_toStartOf="@+id/tvReps"
            app:layout_constraintStart_toEndOf="@+id/tvSet"
            app:layout_constraintTop_toTopOf="@+id/tvSet" />

        <TextView
            android:id="@+id/tvReps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/reps"
            app:layout_constraintBottom_toBottomOf="@+id/tvKg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvKg" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/underscore"
            app:layout_constraintEnd_toEndOf="@+id/tvSet"
            app:layout_constraintStart_toStartOf="@+id/tvSet"
            app:layout_constraintTop_toBottomOf="@+id/tvSet" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/underscore"
            app:layout_constraintEnd_toEndOf="@+id/tvKg"
            app:layout_constraintStart_toStartOf="@+id/tvKg"
            app:layout_constraintTop_toBottomOf="@+id/tvKg" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/underscore"
            app:layout_constraintEnd_toEndOf="@+id/tvReps"
            app:layout_constraintStart_toStartOf="@+id/tvReps"
            app:layout_constraintTop_toBottomOf="@+id/tvReps" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>